<resources>
    <string name="app_name">Room Booking MVVM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ruang_3_4_1">Ruang 3.4.1</string>
    <string name="_26_feb_2020">26-Feb-2020</string>
    <string name="_22_44">22:44</string>
    <string name="_22_33">22:33</string>
    <string name="a">-</string>
    <string name="cancel">Cancel</string>
    <string name="pending">Pending</string>
    <string name="kapasitas_30_orang">Kapasitas 30 Orang</string>
    <string name="available">Available</string>
    <string name="logout_profile">Logout</string>
    <string name="update">Update Profile</string>
    <string name="_02548848461">02548848461</string>
    <string name="no_hp">No Hp</string>
    <string name="rasyid_ridla">Rasyid Ridla</string>
    <string name="_180020285">180020285</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="loading">Loading ...</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="b">+</string>
    <string name="password">Password</string>
    <string name="nim_nik">NIM / NIK</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="pasword">Pasword</string>
    <string name="no_hp1">No HP</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="already_nhave_an_naccount1">Already \nhave an \nAccount?</string>
    <string name="nim_nik1">NIM/NIK</string>
    <string name="nama_wisata">Nama_Wisata</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="info_status_pending">-ini adalah default status,jika anda telah berhasil melakukan booking
-anda menunggu petugas paling lambat 1x24 jam untuk mengganti ke status accepted atau rejected-</string>
    <string name="info_status_reject">-ini adalah status jika booking ruang anda tidak disetujui oleh petugas
-jika status booking rejected silahkan menunggu 1x24 jam untuk bisa melakukan booking ruangan kembali atau bisa langsung hapus booking ini.</string>
    <string name="info_status_accepted">-ini adalah status jika booking ruang anda di setujui petugas
-jika status booking accepted segera konfirmasi ke petugas sarpras untuk melakukan pengisian formulir.</string>


    <string name="titleStart">jam mulai</string>
    <string name="titleEnd">jam selesai</string>
    <string name="selected_time_format">%1$s:%2$s</string>
    <string name="time_prefix">&gt;&gt;</string>
    <string name="time_suffix">&lt;&lt;</string>
</resources>
