<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.rrdev.roombookingmvvm.ui.profile.ProfileViewModel" />
    </data>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:background="@color/purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/todo" />

                <RelativeLayout
                    android:id="@+id/outline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="115dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@color/purple" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@color/yellow" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/outline"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginVertical="30dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outline">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_nim"
                                android:contentDescription="@string/todo" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:orientation="vertical"
                            android:layout_marginStart="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nim"
                                android:textSize="20sp" />

                            <TextView
                                android:text="@{viewmodel.user.nim}"
                                android:id="@+id/tvNIMProfile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/_180020285"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_profile"
                                android:contentDescription="@string/todo" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:orientation="vertical"
                            android:layout_marginStart="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nama"
                                android:textSize="20sp" />

                            <TextView
                                android:text="@{viewmodel.user.namaUser}"
                                android:id="@+id/tvNamaProfile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/rasyid_ridla"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_no"
                                android:contentDescription="@string/todo" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:orientation="vertical"
                            android:layout_marginStart="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_hp"
                                android:textSize="20sp" />

                            <TextView
                                android:text="@{viewmodel.user.nohp}"
                                android:id="@+id/tvNoTelpProfile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/_02548848461"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_password"
                                android:contentDescription="@string/todo" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:orientation="vertical"
                            android:layout_marginStart="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/password"
                                android:textSize="20sp" />

                            <TextView
                                android:text="@{viewmodel.user.password}"
                                android:id="@+id/tvPasswordProfile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/_180020285"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogout"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/layProfile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/bg_available"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layProfile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/update_profile"
                    android:textColor="@color/purple"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</layout>